tests/spec/build/snapshots/cross_package_interface_method_call.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

func main() {}


// === models/models.go ===
package models

type Showable interface {
	Show() string
}

type Item struct {
	Name string
}

func (i Item) Show() string {
	return i.Name
}
