tests/spec/build/snapshots/cross_package_interface_method_casing.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"fmt"
	"github.com/user/myproject/models"
)

type Describable interface {
	Describe() string
}

func printIt(item Describable) {
	fmt.Println(item.Describe())
}

func main() {
	u := models.User{Name: "Alice"}
	printIt(u)
}


// === models/mod.go ===
package models

type User struct {
	Name string
}

func (u User) Describe() string {
	return u.Name
}
