tests/spec/build/snapshots/cross_package_result_fn_arg_adapts_to_tagged_generic_param.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	lisette "github.com/ivov/lisette/prelude"
	"github.com/user/myproject/resolver"
)

func main() {
	cb := resolver.Resultant
	rez := resolver.Resolve(42, func(arg0 int) lisette.Result[int, resolver.Face] {
		ret, ret_1 := cb(arg0)
		if ret_1 != nil {
			return lisette.MakeResultErr[int, resolver.Face](ret_1)
		}
		return lisette.MakeResultOk[int, resolver.Face](ret)
	})
	_ = rez
}


// === resolver/resolver.go ===
package resolver

import lisette "github.com/ivov/lisette/prelude"

type Face interface {
}

func Resultant(arg int) (int, Face) {
	return arg, nil
}

func Resolve[T any, R any, E any](a T, f func(T) lisette.Result[R, E]) lisette.Result[R, E] {
	return f(a)
}
