tests/spec/build/snapshots/cross_package_static_method_call.snap
---
source: tests/spec/build/mod.rs
---
// === geometry/lib.go ===
package geometry

type Point struct {
	X float64
	Y float64
}

func Point_New(x, y float64) Point {
	return Point{
		X: x,
		Y: y,
	}
}

func (p Point) Translate(dx, dy float64) Point {
	return Point{
		X: p.X + dx,
		Y: p.Y + dy,
	}
}


// === main.go ===
package main

import "github.com/user/myproject/geometry"

func main() {
	p := geometry.Point_New(3.0, 4.0)
	p2 := p.Translate(1.0, 1.0)
	_ = p2.X
}
