tests/spec/build/snapshots/cross_package_type_alias_remote_static_method.snap
---
source: tests/spec/build/mod.rs
---
// === lib/mod.go ===
package lib

type Box struct {
	X int
}

func Box_New(x int) Box {
	return Box{X: x}
}

type Alias = Box


// === main.go ===
package main

import "github.com/user/myproject/lib"

func main() {
	b := lib.Box_New(1)
	_ = b.X
}
