tests/spec/build/snapshots/cross_package_type_in_function_signature.snap
---
source: tests/spec/build/mod.rs
---
// === logic/mod.go ===
package logic

import (
	"fmt"
	"github.com/user/myproject/models"
)

func Process(item models.Item) string {
	return fmt.Sprintf("%s: %d", item.Name, item.Value)
}

func CreateItem(name string, value int) models.Item {
	return models.Item{
		Name:  name,
		Value: value,
	}
}


// === main.go ===
package main

import (
	"fmt"
	"github.com/user/myproject/logic"
	"github.com/user/myproject/models"
)

func main() {
	item := models.Item{
		Name:  "test",
		Value: 42,
	}
	fmt.Println(logic.Process(item))
	created := logic.CreateItem("created", 100)
	fmt.Printf("%s: %d\n", created.Name, created.Value)
}


// === models/mod.go ===
package models

type Item struct {
	Name  string
	Value int
}
