tests/spec/build/snapshots/display_cross_module_satisfies_local_interface.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"fmt"
	"github.com/user/myproject/util"
)

type Display interface {
	ToString() string
}

func render(value Display) string {
	return value.ToString()
}

func main() {
	p := util.Point{
		X: 1,
		Y: 2,
	}
	fmt.Print(render(p))
}


// === util/point.go ===
package util

import "fmt"

type Point struct {
	X int
	Y int
}

func (p Point) String() string {
	return fmt.Sprintf("Point { x: %v, y: %v }", p.X, p.Y)
}

func (p Point) ToString() string {
	return p.String()
}
